# ESP32-Remot-Control

./: .gitignore  CMakeLists.txt  README.md  client_min.py  main.c  ota_send.py  partitions.csv  scan.py  sdkconfig
app/: ble_client.py  cli.py  config.py  session.py  tcp_client.py  utils.py
artifacts/: commands.c
components/alerts/: CMakeLists.txt  alerts.c
components/alerts/include/: alerts.h
components/app_config/: app_cfg.c
components/app_config/include/: app_cfg.h
components/ble/: CMakeLists.txt  ble_cmd.c  ble_fallback.c  ble_ids.c  gatt_server.c
components/ble/fallback/: fb_core.c  fb_gap.c  fb_worker.c
components/ble/gatt/: ble_cmd.c  ble_ota.c  gatt_attrs.c  gatt_notify.c  gatt_server.c  gatt_wifi_cred.c
components/ble/include/: ble_cmd.h  ble_ids.h  ble_ota_stub.h
components/ble/priv/: fb_priv.h  gatt_priv.h  ota_bridge.h
components/bluetooth/: CMakeLists.txt  ble_fallback.c  ble_fallback.h  ble_ota.c  ble_ota_stub.c  gatt_server.c  gatt_server.h
components/bootflag/: CMakeLists.txt  bootflag.c
components/bootflag/include/: bootflag.h
components/cmd/: CMakeLists.txt  cmd.c  cmd_auth.c  cmd_base.c  cmd_bus.c  cmd_dht.c  cmd_diag.c  cmd_led.c  cmd_ota.c  cmd_reply.c  cmd_router.c  cmd_table.c  cmd_wifi.c  command.c
components/cmd/include/: cmd_router.h  command.h  command_bus.h  commands.h
components/command/: CMakeLists.txt  command.c  command.h  command_bus.c  command_bus.h  commands.c  commands.h
components/common/: CMakeLists.txt  app_cfg.h  ble_ids.c
components/common/include/: app_cfg.h  ble_ids.h
components/components/app_config/: CMakeLists.txt  app_cfg.c
components/components/bluetooth/: CMakeLists.txt  ble_cmd.c  ble_fallback.c  gatt_server.c
components/components/bootflag/: CMakeLists.txt  bootflag.c
components/components/cmd/: cmd_auth.c  cmd_base.c  cmd_bus.c  cmd_diag.c  cmd_led.c  cmd_ota.c  cmd_reply.c  (+1 more)
components/core/: CMakeLists.txt  alerts.c  alerts.h  bootflag.c  bootflag.h  errsrc.c  errsrc.h  monitor.c  monitor.h  syscoord.c  syscoord.h
components/dht/: CMakeLists.txt  dht.c
components/errsrc/: CMakeLists.txt  errsrc.c
components/led/: CMakeLists.txt  led.c  led.h
components/monitor/: monitor.c  monitor_priv.h
components/net/: CMakeLists.txt
components/net/include/: tcp_priv.h  tcp_server.h  wifi.h  wifi_priv.h
components/net/tcp/: tcp_client.c  tcp_listener.c
components/net/wifi/: wifi_api.c  wifi_backoff.c  wifi_event.c
components/ota/: CMakeLists.txt  ota_handler.c  ota_handler.h  ota_priv.h  ota_session.c  ota_writer.c
components/syscoord/: sys_core.c  sys_priv.h
components/wifi/: CMakeLists.txt  tcp_server.c  tcp_server.h  wifi.c  wifi.h
main/: CMakeLists.txt  main.c
main/main/: CMakeLists.txt  main.c
(+60 files in other folders)
